--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Google Meet Audio Indicator",
-  "description": "Shows visual cues for audio activity in Google Meet tabs",
-  "version": "1.0",
+  "name": "Google Meet Audio Indicator with Transcription",
+  "description": "Shows visual cues for audio activity in Google Meet tabs with real-time transcription",
+  "version": "1.1",
   "manifest_version": 3,
   "minimum_chrome_version": "116",
   "action": {
@@ -18,7 +18,7 @@
       "run_at": "document_idle"
     }
   ],
-  "permissions": ["tabCapture", "offscreen", "activeTab", "tabs"],
+  "permissions": ["tabCapture", "offscreen", "activeTab", "tabs", "storage"],
   "host_permissions": ["*://meet.google.com/*"],
   "icons": {
     "16": "icons/inactive.png",
